<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 公用模块 -->
    <string name="hello">Hello World, ENNProjectActivity!</string>
    <string name="app_name">LifeShare</string>
    <string name="input_pattern_error">输入的数据格式有误!</string>
    <string name="yes">确定</string>
    <string name="confirm">确认</string>
    <string name="tip">提示</string>
    <string name="no">取消</string>
    <string name="clear">清空</string>
    <string name="exit">退出</string>
    <string name="retry">重试</string>
    <string name="save">保存</string>
    <string name="cancle">取消</string>
    <string name="date_tip">日期选择</string>

    <!-- 登录模块 -->
    <string name="loginout">退出</string>
     <!-- 登录 -->
    <string name="change_pwd">修改密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="confrim_change_pwd">提交</string>
    <string name="in_pwd">请输入新密码</string>
    <string name="pwd_ever">请输入原始密码</string>
    <string name="in_pwd_again">请确认新密码</string>
    <string name="username_or_phone">请输入手机号码</string>
    <string name="username_or_phone2">用户名或手机号</string>
    <string name="number">手机号</string>
    <string name="yzm">验证码</string>
    <string name="input_yzm">请输入验证码</string>
    <string name="get_yzm">获取验证码</string>
    <string name="input_pwd">请设置登录密码</string>
    <string name="pwd">密码</string>
    <string name="new_pwd">新密码</string>
    <string name="sure_new_pwd">确认新密码</string>
    <string name="pwd_again">请再次输入密码</string>
    <string name="forget_pwd_no">忘记密码</string>
    <string name="forget_pwd_yes">记住密码</string>
    <string name="third_login">第三方登录：</string>
    <string name="third_qq">QQ</string>
    <string name="third_weixin">微信</string>
    <string name="third_weibo">微博</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="next">下一步</string>
    <string name="confrim_register">立即注册</string>
    <string name="sub_cancel_title">提示</string>
    <string name="ti1">邮件已发送默认邮箱</string>
    <string name="ti2">请您前往重置新密码</string>
    <string name="text_pwd">密码须包含大写、小写字母、数字,长度为6到16位请重新输入</string>
    <string name="text_pwd_add">您两次输入的密码不一样，请重新输入</string>
    <string name="text_pwd_null">密码不能为空，请重新输入</string>
    <string name="text_username">用户名须为6到16位有效数字和字母，请重新输入</string>
    <string name="text_phone">手机号输入不正确</string>
    <string name="text_null">用户名或密码不能为空，请重新输入</string>
    <string name="text_email">您的邮箱输入有误，请重新输入</string>
    <string name="text_telphone">您的电话输入有误，请重新输入</string>
    <string name="tv_message">消息</string>
    <string name="tv_personal">个人中心</string>

     <!--主页  -->
     <string name="main_about">关于</string>
     <string name="main_version">应用版本</string>
     <string name="main_help">使用帮助</string>
     <string name="main_announcement">通知公告</string>
     <string name="main_app_update">版本更新</string>
     <string name="main_account_manage">账号管理</string>
     <string name="sap_pass_modify">SAP密码修改</string>
     <string name="gesture_pass_modify">快捷登陆设置</string>
     <!-- activity_main -->
     <string name="home">首页</string>
     <string name="course">教程</string>
     <string name="qa">问答</string>
     <string name="record">记录</string>
     <!-- 友盟分享 -->
     
    <string name="pull_to_refresh_pull_label" translatable="false">向下拉动可以刷新</string>
    <string name="pull_to_refresh_release_label" translatable="false">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label" translatable="false">加载中&#8230;</string>
    <string name="pull_to_refresh_tap_label" translatable="false">点击刷新</string>
    <string name="umeng_socialize_network_break_alert" translatable="false">请连接网络后再尝试！</string>
    <string name="umeng_socialize_comment" translatable="false">评论</string>
    <string name="umeng_socialize_comment_detail" translatable="false">评论详情</string>
    <string name="umeng_socialize_back" translatable="false">返回</string>
    <string name="umeng_socialize_near_At" translatable="false">最近\@的好友</string>
    <string name="umeng_socialize_friends" translatable="false">关注的好友</string>
    <string name="umeng_socialize_send" translatable="false">发布</string>
    <string name="umeng_socialize_tip_blacklist" translatable="false">对不起，因为违反了用户协议您已被禁言.</string>
    <string name="umeng_socialize_tip_loginfailed" translatable="false">登录失败&#8230;</string>
    <string name="umeng_socialize_msg_sec" translatable="false">秒前</string>
    <string name="umeng_socialize_msg_min" translatable="false">分钟前</string>
    <string name="umeng_socialize_msg_hor" translatable="false">小时前</string>
    <string name="umeng_socialize_ucenter_login_title_guide" translatable="false">游客登录</string>
    <string name="umeng_socialize_ucenter_login_title_platform" translatable="false">登录帐号</string>

    <dimen name="alphabet_size">12dip</dimen>
    <dimen name="umeng_socialize_pad_window_height">350dip</dimen>
    <dimen name="umeng_socialize_pad_window_width">580dip</dimen>

    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台， 
												（二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。
												（三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_unauthorize">未授权</string>
    <string name="umeng_socialize_text_ucenter">个人中心</string>
    <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
    <string name="umeng_socialize_text_comment_hint">说点什么吧&#8230;</string>
    <string name="umeng_socialize_text_friend_list">好友列表</string>
    <string name="umeng_socialize_text_visitor">游客</string>
    <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
    <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
    <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
    <string name="umeng_socialize_text_waitting">请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin">跳转易信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin_circle">跳转易信朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qzone">跳转QZone中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_redirect">跳转</string>
    <string name="umeng_socialize_text_waitting_message">,请稍候...</string>
    <string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
    <!-- 平台名称 -->
    <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_douban_key">豆瓣网</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中&#8230;</string>
    <string name="umeng_socialize_content_hint">说点啥&#8230;</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_send_btn_str">发送</string>
    <string name="umeng_socialize_img_des"></string>
    <string name="umeng_socialize_share">分享</string>

    <string name="umeng_socialize_mail">邮件</string>
    <string name="umeng_socialize_sms">短信</string>
    <string name="umeng_socialize_sina">新浪</string>
    <string name="umeng_socialize_text_yixin_key">易信</string>
    <string name="umeng_socialize_text_yixincircle_key">易信朋友圈</string>

    <string name="umeng_socialize_text_laiwangdynamic_key">来往动态</string>
    <string name="umeng_socialize_text_evernote_key">印象笔记</string>
    <string name="umeng_socialize_text_ydnote_key">有道云笔记</string>
    <string name="umeng_socialize_text_facebook_key">facebook</string>
    <string name="umeng_socialize_text_twitter_key">twitter</string>
    <string name="umeng_socialize_text_instagram_key">instagram</string>
    <string name="umeng_socialize_text_pinterest_key">pinterest</string>
    <string name="umeng_socialize_text_pocket_key">pocket</string>
    <string name="umeng_socialize_text_linkedin_key">Linkedin</string>
    <string name="umeng_socialize_text_foursquare_key">Foursquare</string>
    <string name="umeng_socialize_text_whatsapp_key">WhatsApp</string>
    <string name="umeng_socialize_text_line_key">LINE</string>
    <string name="umeng_socialize_text_flickr_key">Flickr</string>
    <string name="umeng_socialize_text_tumblr_key">Tumblr</string>
    <string name="umeng_socialize_text_alipay_key">支付宝</string>
    <string name="umeng_socialize_text_kakao_key">Kakao Talk</string>
    <string name="umeng_socialize_text_googleplus_key">GooglePlus</string>
    <!-- 热门教程 -->
    <string name="hot_course">热门教程</string>
    <!-- 手工达人 -->
    <string name="hand_up">手工达人</string>
    <!-- 热门类别 -->
    <string name="hot_category">热门类别</string>
    
    <string name="see_more">查看更多</string>
    <dimen name="textsize_m">15sp</dimen>
     <string name="list_no_data_lost">暂时还未有人提问呢</string>
    <string name="list_no_data_found">暂时还未有好心人出现</string>
     
    
</resources>