<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="100dip"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="300dip"
        android:layout_below="@+id/title" >

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="60dip"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="0dip"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="2dip"
            android:layout_marginTop="2dip"
            android:background="@drawable/title_bg" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="10dip"
                android:text="@string/date_tip"
                android:textColor="@color/white"
                android:textSize="@dimen/et_textsize" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="2dip"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="2dip"
            android:background="@drawable/input_bg" >

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/dialog_btn"
                android:gravity="center"
                android:padding="@dimen/btn_padding"
                android:text="@string/no"
                android:textColor="@color/black"
                android:textSize="@dimen/tv_textsize" >
            </Button>

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/dialog_btn"
                android:gravity="center"
                android:padding="@dimen/btn_padding"
                android:text="@string/clear"
                android:textColor="@color/black"
                android:textSize="@dimen/tv_textsize"
                android:visibility="gone" >
            </Button>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/dialog_btn"
                android:gravity="center"
                android:padding="@dimen/btn_padding"
                android:text="@string/yes"
                android:textColor="@color/black"
                android:textSize="@dimen/tv_textsize" >
            </Button>
        </LinearLayout>

        <!--
            TextView
            android:id="@+id/dialog_msg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout1"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="25dip"
            android:gravity="left"
            android:paddingLeft="30dip"
            android:text="@string/cancel_info"
            android:textColor="@color/white"
            android:textSize="28sp" /
        -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout1"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="2dip"
            android:layout_marginTop="0dip"
            android:background="@color/white"
            android:paddingBottom="20dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="20dip" >

            <com.enn.servicepda.utils.WheelView
                android:id="@+id/year"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.enn.servicepda.utils.WheelView
                android:id="@+id/month"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <com.enn.servicepda.utils.WheelView
                android:id="@+id/date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>