<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F0"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible" >

            <!-- 热门教程 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hot_course"
                        android:textSize="@dimen/title_textsize18" />

                    <TextView
                        android:id="@+id/tv_course_see_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:gravity="right"
                        android:text="@string/see_more"
                        android:textColor="@color/see_more"
                        android:textSize="@dimen/title_textsize18" />
                </RelativeLayout>

                <com.mendale.app.utils.MyGridView
                    android:id="@+id/gv_coursee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:horizontalSpacing="15dp"
                    android:numColumns="2"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="15dp" />

                <Button
                    android:id="@+id/btn_course_see_more"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff"
                    android:text="点击查看更多教程"
                    android:textColor="@color/see_more" />
            </LinearLayout>
            <!-- 手工达人 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="40dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hand_up"
                        android:textSize="@dimen/title_textsize18" />

                    <TextView
                        android:id="@+id/tv_hand_up_see_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/see_more"
                        android:textColor="@color/see_more"
                        android:textSize="@dimen/title_textsize18" />
                </RelativeLayout>

                <com.mendale.app.utils.MyGridView
                    android:id="@+id/gv_hand_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:horizontalSpacing="15dp"
                    android:numColumns="3"
                    android:verticalSpacing="15dp" />
            </LinearLayout>
            <!-- 热门类别 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="40dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hot_category"
                        android:textSize="@dimen/title_textsize18" />

                    <TextView
                        android:id="@+id/tv_type_see_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/see_more"
                        android:textColor="@color/see_more"
                        android:textSize="@dimen/title_textsize18" />
                </RelativeLayout>

                <com.mendale.app.utils.MyListView
                    android:id="@+id/lv_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    android:dividerHeight="10dp" />

                <Button
                    android:id="@+id/btn_type_see_more"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff"
                    android:text="点击查看更多分类"
                    android:textColor="@color/see_more" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_home_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <ImageView
            android:id="@+id/iv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pulltorefresh_icon_loading" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="正在加载" />
    </LinearLayout>

</RelativeLayout>