<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color" >


    <include
        android:id="@+id/lay_head"
        layout="@layout/common_header" />


    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/lay_head"
        android:layout_marginTop="20dp"
        android:background="@color/line" />

    <LinearLayout
        android:id="@+id/ll_username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/line"
        android:background="@color/login_white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:hint="用户名"
            android:paddingLeft="20dp"
            android:textColorHint="@color/pwd_text_hint"
            android:textSize="16sp" />

        <com.mendale.app.utils.ClearEditText
            android:id="@+id/register_et_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:background="@color/white"
            android:hint="请输入用户名"
            android:textColorHint="@color/text_hint"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/ll_username"
        android:background="@color/login_white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:hint="@string/pwd"
            android:paddingLeft="20dp"
            android:textColorHint="@color/pwd_text_hint"
            android:textSize="16sp" />

        <com.mendale.app.utils.ClearEditText
            android:id="@+id/register_et_pwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint"
            android:textSize="16sp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_confirm_psd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/ll_password"
        android:background="@color/login_white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/confirm_pwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:hint="确认密码"
            android:paddingLeft="20dp"
            android:textColorHint="@color/pwd_text_hint"
            android:textSize="16sp" />

        <com.mendale.app.utils.ClearEditText
            android:id="@+id/register_et_comfirm_psd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/pwd_again"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint"
            android:textSize="16sp" />
    </LinearLayout>
     <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:background="@color/line" />
    <LinearLayout
        android:id="@+id/ll_phone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/ll_confirm_psd"
        android:background="@color/login_white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:gravity="center_vertical"
            android:hint="手机号"
            android:paddingLeft="20dp"
            android:textColorHint="@color/pwd_text_hint"
            android:textSize="16sp" />

        <com.mendale.app.utils.ClearEditText
            android:id="@+id/register_et_phone_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:background="@color/white"
            android:ems="10"
            android:hint="请输入手机号"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/ll_phone"
        android:background="@color/line" />

    <Button
        android:id="@+id/register_btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/line1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_selector"
        android:clickable="false"
        android:text="@string/confrim_register"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>